[kcms/keyboard] Fix translations of OSD config

Loading directly from kcfg means they don't go through i18n.
The strings used have remained the same.

BUG: 439394